# ProtNHF

./: .gitignore  LICENSE  README  README.md  __main__.py  dataset.py  flow.py  metrics.py  nn.py  nn_.py  pyproject.toml  requirements.txt  run.py
examples/: cond_sample.yaml  config.yaml  from_huggingface.yaml  training.yaml  uncond_sample.yaml
protnhf/: __main__.py  bias.py  config.py  dataset.py  flow.py  metrics.py  nn.py  property.py  sampler.py  trainer.py
