[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protnhf"
version = "0.1.0"
description = "Neural Hamiltonian Flows for Controllable Protein Sequence Generation"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Bharath Raghavan" },
    { name = "David M. Rogers" }
]

dependencies = [
    "biopython>=1.85",
    "fair-esm>=2.0.0",
    "h5py>=3.13.0",
    "numpy>=2.4.2",
    "performer-pytorch>=1.1.4",
    "pydantic>=2.12.5",
    "PyYAML>=6.0.3",
    "torch>=2.2,<2.8",
    "torch-scatter>=2.1.2",
    "tqdm>=4.67.1",
    "transformers>=4.48.1",
    "typer>=0.24.0",
    "typing-extensions>=4.15.0"
]


[project.scripts]
protnhf = "protnhf.__main__:app"
